# workflows-mcp

./: .gitignore  .releaserc  CHANGELOG.md  README.md  generate_schema.py  llm_schema.json  pyproject.toml  schema.json  test_analyze.py  test_resolver.py  validate.py
.github/: CLA.md  CODEOWNERS
.github/workflows/: publish-pypi.yml  release.yml  test.yml
benchmarks/: README.md  fetch_benchmark_datasets.py  workflows_bench_common.py  workflows_locomo_bench.py  workflows_locomo_pooled_bench.py  workflows_longmemeval_bench.py  workflows_memory_multiservice_bench.py  workflows_topology_bench.py
docs/guides/: memory-tools-cheatsheet.md  recursive-workflows.md  secrets-management.md
docs/llm/: block-reference.md  block-schemas.json
scripts/: generate_block_reference.py  generate_schema.py  update-version.py  validate.py
skills/workflows-mcp/: README.md  SKILL.md
src/workflows_mcp/: __init__.py  __main__.py  context.py  formatting.py  server.py  tools.py  tools_knowledge.py  tools_memory.py
tests/: conftest.py  generate_snapshots.py  regenerate_snapshots.sh  reproduce_resolver.py  test_behavior.py  test_benchmarks_multiservice_smoke.py  test_execution_memory.py  test_execution_state.py  test_for_each_observer.py  test_for_each_pause_resume.py  test_generate_block_reference.py  test_get_block_outputs.py  test_io_queue.py  test_job_queue.py  test_knowledge_executor.py  test_knowledge_tools.py  test_llm_executor.py  test_llm_profile_resolution.py  test_mcp_client.py  test_memory_consolidate.py  test_memory_graph_query_regressions.py  test_memory_ingest_structured.py  test_memory_unified_contract.py  test_nested_execution_state.py  test_nested_workflow_pause_resume.py  test_read_files_input.py  test_readfiles_sections.py  test_scenarios.py  test_secrets.py  test_server_memory_startup.py  test_sql_executor.py  test_sql_model.py  test_state_sqlite.py  test_three_level_nesting.py  test_utils.py
tests/snapshots/: block-status-failure-detection.json  block-status-skip-detection.json  block-status-success-detection.json  composition-child-calculator.json  composition-output-passing.json  composition-recursion.json  composition-workflow-call.json  conditionals-block-status.json  conditionals-complex-expressions.json  conditionals-input-based.json  core-conditionals-test.json  core-secrets-management-test.json  dag-execution-dependency-order.json  dag-execution-optional-deps.json  dag-execution-parallel.json  editfile-interpolation-test.json  editfile-operations-test.json  executor-llm-operations-test.json  file-operations-create-read.json  file-operations-create.json  file-operations-read.json  file-operations-template-render.json  filters-chaining.json  for-each-comprehensive.json  for-each-dict-demo.json  for-each-dynamic-key.json  for-each-list-demo.json  http-basic-get.json  integration-end-to-end.json  interactive-simple-approval.json  output-type-validation.json  readfiles-test.json  safe-model-parent.json  secrets-audit-tracking.json  (+26 more)
(+316 files in other folders)
